--- a/nPM/locale/locale.csv
+++ b/nPM/locale/locale.csv
@@ -1704,7 +1704,7 @@ SPO2BoardFailure,SpO₂板卡错误,SpO₂ Board Failure
 NIBPSimul,NIBP同侧,NIBP Simul
 Input8DigitsPassword,请输入8位数字密码,Please input 8 digits password
 BornDate,出生日期,Born Date
-RescueStorageSpaceFull,营救数据存储空间满,Rescue storage space full
+CurrentPatientStorageSpaceFull,当前病人存储空间满,Current patient storage space full
 ChangePatientType,更改病人类型会导致配置更改，您确认要这么做吗？,Changing patient type will cause the configuration changes，Are you sure?
 shutDownIn2Min,电量严重不足，将在两分钟后关机，请连接电源,Serious shortage of electircity.System will shutdown in tow minute.Please connect the power supply.
 handMeasure,手部测量,Hand Measure
