fix(translate): 添加屏幕校准翻译
fix #2392

--- a/nPM/locale/locale.csv
+++ b/nPM/locale/locale.csv
@@ -1734,3 +1734,4 @@ BLM_N5,BLM N5,BLM N5
 SUNTECH_NIBP,Suntech Nibp,Suntech Nibp
 BLM_CO2,BLM CO₂,BLM CO₂
 MASIMO_CO2,Masimo CO₂,Masimo CO₂
+TouchCrossHairToCalibrate,触摸十字线校准,Touch cross hair to calibrate
