--- a/nPM/locale/locale.csv
+++ b/nPM/locale/locale.csv
@@ -326,6 +326,10 @@ AlarmLimitMenu,报警限,Alarm Limit
 AlarmLimitMenuDesc,报警限,Alarm Limit Setting
 SelectAlarmNotExist,选择的报警不存在!,The selected alarm does not exist!
 PrintSpeed,打印速度,Print Speed
+PhyAlarmTriggerPrint,生理报警触发打印,Phy. Alarm Trigger Print
+CodeMarkerTriggerPrint,Code Marker触发打印,Code Marker Trigger Print
+NIBPReadingTriggerPrint,NIBP快照触发打印,NIBP Snapshot Trigger Print
+WaveFreezeTriggerPrint,波形冻结触发打印,Wave Freeze Trigger Print
 PrintNumOfTraces,打印波形数量,Number Of Print Traces
 PrintAlarmTriger,报警触发,Alarm Trigger
 Print12LeadFormat,12导格式,12-Lead Format
