--- a/nPM/locale/locale.csv
+++ b/nPM/locale/locale.csv
@@ -743,7 +743,7 @@ NIBPSendCommunicationStop,NIBP发送通信中断,NIBP Send Communication Stop
 NIBPSelfTestError,NIBP自测失败,NIBP Selftest Fail
 NIBPModuleAbnormal,NIBP模块异常,NIBP Module Abnormal
 NIBPModuleNotCalibrate,NIBP未校准,NIBP Module Not Calibrated
-NIBPModuleError,NIBP模块错误,NIBP Module Error
+NIBPModuleError,NIBP模块硬件错误,NIBP Module HardWare Error
 NIBPModuleOverPressure,NIBP模块过压,NIBP Module Overpressure
 NIBPCommunicationTimeout,NIBP通信超时,NIBP Communication Timeout
 NIBPMeasurementAbort,测量中止,NIBP Measurement Aborted
