--- a/nPM/locale/locale.csv
+++ b/nPM/locale/locale.csv
@@ -1521,10 +1521,10 @@ English,英文,English
 Chinese,中文,Chinese
 UnitSetup,单位,Unit Setup
 UnitSetupDesc,单位,Unit Setup
-HeightUnit,高度单位,Height Unit
-WeightUnit,重量单位,Weight Unit
+HeightUnit,身高单位,Height Unit
+WeightUnit,体重单位,Weight Unit
 STUnit,ST段单位,ST Unit
-PressureUnit,压力单位,Pressure Unit
+NIBPUnit,NIBP单位,NIBP Unit
 TemperatureUnit,温度单位,Temperature Unit
 CVPUnit,中心静脉压单位,CVP Unit
 ICPUnit,颅内压单位,ICP Unit
