feat: 增加波形色阶画法
增加波形色阶画法，可以在监护仪维护中对波形的画法及波形宽度进行设置。
同时取消CO2波形50mm/s速度，因为CO2的采样率比较低，使用50mm/s速度进行
绘画时，会出现很宽的空白

BREAKING CHANGE: 更新了波形的画法，更新了冻结模式下的波形画法

fix #206

--- a/nPM/locale/locale.csv
+++ b/nPM/locale/locale.csv
@@ -1445,9 +1445,12 @@ StopTouchScreenCalibration,停止触摸屏校准,Stop Touch Screen Calibration
 Cancel,取消覆盖,Cancel
 OthersMaintainMenu,其他,Others
 OthersMaintainMenuDesc,其他,Others
-WaveLine,波线,WaveLine
-Fat,粗,Fat
-Med,中,Med
+WaveDrawMode,波形绘画方式,Wave Draw Mode
+Mono,阶梯,Mono
+Color,色阶,Color
+WaveLine,波形线条,Wave Line
+Thick,粗,Thick
+Medium,中,Medium
 Thin,细,Thin
 ECGStandard,ECG标准,ECG Standard
 AHA,AHA,AHA
