fix(neonate): 工厂配置里提供新生儿机器的选项。设置新生儿机器后，病人信息，配置管理等将只有新生儿选项
fix #2614

--- a/nPM/locale/locale.csv
+++ b/nPM/locale/locale.csv
@@ -1854,3 +1854,4 @@ size12Inch,12 inch,12 inch
 ScreenInfo,屏幕大小,Screen Size
 TouchCrosshairToCalibrate,触摸十字线校准,Touch crosshair to calibrate
 ChangeTime,更改系统时间将会新建病人，是否继续？,"Change system time will create new patients,Whether to continue?"
+NeoMachine,新生儿机器,Machine For Neonate
