fix(translate): 修改系统板发生通讯中断的翻译
fix #2651

--- a/nPM/locale/locale.csv
+++ b/nPM/locale/locale.csv
@@ -1491,4 +1491,4 @@ BLM_CO2,BLM CO₂,BLM CO₂
 MASIMO_CO2,Masimo CO₂,Masimo CO₂
 TouchCrosshairToCalibrate,触摸十字线校准,Touch crosshair to calibrate
 ChangeTime,更改系统时间将会新建病人，是否继续？,"Change system time will create new patients,Whether to continue?"
-nPMBoardSendCommunicationStop,系统板发送通讯中断,nPMBoard Send Communicaiton Stop
+SystemBoardSendCommunicationStop,系统板发送通讯中断,System Board Send Communicaiton Stop
