fix(alarm): 添加系统板发送通讯中断的字符串及对应翻译

--- a/nPM/locale/locale.csv
+++ b/nPM/locale/locale.csv
@@ -1855,3 +1855,4 @@ ScreenInfo,屏幕大小,Screen Size
 TouchCrosshairToCalibrate,触摸十字线校准,Touch crosshair to calibrate
 ChangeTime,更改系统时间将会新建病人，是否继续？,"Change system time will create new patients,Whether to continue?"
 NeoMachine,新生儿机器,Machine For Neonate
+SystemBoardSendCommunicationStop,系统板发送通讯中断,System Board Send Communication Stop
