--- a/nPM/locale/locale.csv
+++ b/nPM/locale/locale.csv
@@ -13,7 +13,7 @@ Notch,陷波,Notch
 MachineConfigIsUpdatedNow,机器配置现在已经更新。,The machine configuration has been updated.
 IsRebootMachine,是否重启监护仪? ,Restart the monitor now?
 UpdateTips,更新提示,Update Tips
-EditPassWordDesc,修改密码,Edit Password
+ChangePasswordDesc,修改密码,Change Password
 EditPassWord,修改密码,Edit Password
 LastPassword,上次密码,Last Password
 EditPasswordNotSuccess,修改密码失败,Edit Password Not Success
