--- a/nPM/locale/locale.csv
+++ b/nPM/locale/locale.csv
@@ -16,7 +16,7 @@ UpdateTips,更新提示,Update Tips
 ChangePasswordDesc,修改密码,Change Password
 ChangePassword,修改密码,Change Password
 OldPassword,旧密码,Old Password
-EditPasswordNotSuccess,修改密码失败,Edit Password Not Success
+ChangePasswordFail,修改密码失败,Change Password Failed
 EditPasswordSuccess,修改密码成功,Edit Password Success
 RESPModule,Resp,Resp
 NIBPModule,NIBP,NIBP
