fix(language): 修改语言表"NIBP发送通信中断"字符串Id，NIBPSendCommunicationStop修改为NIBPDataTransmissionStop，并修改代码

--- a/nPM/locale/locale.csv
+++ b/nPM/locale/locale.csv
@@ -679,7 +679,7 @@ NIBPDIAHigh,舒张压高,NIBP DIA High
 NIBPMAPLow,平均压低,NIBP MAP Low
 NIBPMAPHigh,平均压高,NIBP MAP High
 NIBPCommunicationStop,NIBP通信中断,NIBP Communication Stop
-NIBPSendCommunicationStop,NIBP发送通信中断,NIBP Send Communication Stop
+NIBPDataTransmissionStop,NIBP发送通信中断,NIBP Data Transmission Stop
 NIBPSelfTestError,NIBP自测失败,NIBP Selftest Fail
 NIBPModuleAbnormal,NIBP模块异常,NIBP Module Abnormal
 NIBPModuleNotCalibrate,NIBP未校准,NIBP Module Not Calibrated
