fix(language): 修改语言表"NIBP自测失败"字符串Id，NIBPSelfTestError修改为NIBPSelftestFailed，并修改代码

--- a/nPM/locale/locale.csv
+++ b/nPM/locale/locale.csv
@@ -680,7 +680,7 @@ NIBPMAPLow,平均压低,NIBP MAP Low
 NIBPMAPHigh,平均压高,NIBP MAP High
 NIBPCommunicationStop,NIBP通信中断,NIBP Communication Stop
 NIBPDataTransmissionStop,NIBP发送通信中断,NIBP Data Transmission Stop
-NIBPSelfTestError,NIBP自测失败,NIBP Selftest Fail
+NIBPSelftestFailed,NIBP自测失败,NIBP Selftest Failed
 NIBPModuleAbnormal,NIBP模块异常,NIBP Module Abnormal
 NIBPModuleNotCalibrate,NIBP未校准,NIBP Module Not Calibrated
 NIBPModuleError,NIBP模块硬件错误,NIBP Module HardWare Error
