fix(language): 修改语言表"恢复默认"字符串Id，RecoverDefaults修改为RestoreDefaults，并修改代码

--- a/nPM/locale/locale.csv
+++ b/nPM/locale/locale.csv
@@ -1170,7 +1170,7 @@ H2min,2分钟,2min
 H3min,3分钟,3min
 _alarmLightOnAlarmReset,报警灯复位,Alarm Light On Alarm Reset
 Defaults,默认,Defaults
-RecoverDefaults,默认覆盖,Recover Defaults
+RestoreDefaults,恢复默认,Restore Defaults
 ModuleMaintainMenu,模块维护,Module Maintain
 ModuleMaintainMenuDesc,模块维护,Module Maintain
 AnaesthesiaModuleCalibration,麻醉模块化校准,Anaesthesia Module Calibration
