fix(interface): 1. 将PR趋势波形改为HR/PR趋势波形。  2. 体温测量范围改为0-50
因为PR趋势波形绘画的是HR/PR的趋势波形，所以更改名称

fix #2528

--- a/nPM/locale/locale.csv
+++ b/nPM/locale/locale.csv
@@ -109,7 +109,7 @@ PVITrendWave,PVI,PVI
 SpHbTrendWave,SpHb,SpHb
 SpMetTrendWave,SpMet,SpMet
 SpCOTrendWave,SpCO,SpCO
-PRTrendWave,PR,PR
+PRTrendWave,HR/PR,HR/PR
 NIBP,NIBP,NIBP
 RESP,Resp,Resp
 ParameterColor,参数颜色,Parameter Color
