fix(interface): 适配12/15寸机器，软按键增加报警暂停，报警复位，打印，NIBP测量，冻结。
同时，SoftkeyManager里增加处理按键Pressed信号。

fix #2661

--- a/nPM/locale/locale.csv
+++ b/nPM/locale/locale.csv
@@ -805,6 +805,7 @@ Orange,橙色,Orange
 Cyan,蓝绿色,Cyan
 Purple,紫色,Purple
 AlarmPause,报警暂停,Alarm Pause
+AlarmReset,报警复位,Alarm Reset
 AlarmOff,报警关闭,Alarm Off
 AlarmAudioOff,报警音关闭,Alarm Audio Off
 AlarmPauseTime,报警暂停时间,Alarm Pause Time
