--- a/nPM/locale/locale.csv
+++ b/nPM/locale/locale.csv
@@ -164,6 +164,7 @@ FastSat,快速SpO₂,Fast SAT
 SpHbPrecisionMode,SpHb精度模式,SpHb Precision Mode
 SpHbVesselMode,SpHb动脉/静脉模式,SpHb Arterial/Venous Mode
 SpHbAveragingMode,SpHb平均模式,SpHb Averaging Mode
+SpHbUnit,SpHb 单位,SpHb Unit
 PviAveragingMode,PVI平均模式,PVI Averaging Mode
 AveragingNormal,正常,Normal
 AveragingFast,快速,Fast
@@ -329,6 +330,7 @@ celsius,℃,℃
 fahrenheit,℉,℉
 percent,%,%
 gdL,g/dL,g/dL
+mmolL,mmol/L,mmol/L
 mLdL,mL/dL,mL/dL
 Defaults,恢复默认值,Defaults
 SureAllAlarmDefaults,"所有报警设置将恢复默认值,您确定进行吗?",All alarm settings will reset to the defaults. Are you sure to continue?
