feat(Rainbow): 支持Rainbow编程模式

--- a/nPM/locale/locale.csv
+++ b/nPM/locale/locale.csv
@@ -1533,6 +1533,14 @@ SPO2OnlyMode,仅限SpO₂模式,SpO₂ only mode
 SPO22OnlyMode,仅限SpO₂ 2模式,SpO₂ 2 only mode
 SPO2BoardFailure,SpO₂板卡错误,SpO₂ Board Failure
 SPO22BoardFailure,SpO₂ 2板卡错误,SpO₂ 2 Board Failure
+SPO2Program,SpO₂ 编程,SpO₂ Program 
+RequestEnterProgramMode,请求进行编程模式,Request Enter Program Mode
+Programming,正在编程,Programming
+ProgramComplete,编程完成,Program Complete
+CommunicationError,通信失败,Communication Error
+FlashError,Flash 错误,Flash Error
+InvalidUpgradeApplication,更新应用程序无效,Invalid Upgrade Application
+InvalidToolConfiguration,工具配置无效,Invalid Tool Configuration
 NIBPSimul,NIBP同侧,NIBP Simul
 Input8DigitsPassword,请输入8位数字密码,Please input 8 digits password
 BornDate,出生日期,Born Date
